--- a/webapp/channels/src/i18n/zh-CN.json
+++ b/webapp/channels/src/i18n/zh-CN.json
@@ -1601,7 +1601,7 @@
   "admin.license.enterprisePlanTitle": "需要增加用户数？",
   "admin.license.enterpriseToAdvancedAdvantage.adLdapGroupSync": "AD/LDAP 组同步",
   "admin.license.enterpriseToAdvancedAdvantage.advancedCompliance": "高级合规",
-  "admin.license.enterpriseToAdvancedAdvantage.advancedWorkflows": "使用 Playbooks 的高级工作流",
+  "admin.license.enterpriseToAdvancedAdvantage.advancedWorkflows": "使用剧本的高级工作流",
   "admin.license.enterpriseToAdvancedAdvantage.attributeBasedAccess": "基于规则的访问控制",
   "admin.license.enterpriseToAdvancedAdvantage.channelWarningBanners": "频道警告横幅",
   "admin.license.enterpriseToAdvancedAdvantage.highAvailability": "高可用性",
@@ -1875,10 +1875,10 @@
   "admin.permissions.group.manage_public_channel_members_and_read_groups.name": "管理频道成员",
   "admin.permissions.group.manage_shared_channels.description": "管理共享频道",
   "admin.permissions.group.manage_shared_channels.name": "共享频道",
-  "admin.permissions.group.playbook_private.description": "管理私有Playbooks。",
-  "admin.permissions.group.playbook_private.name": "管理私有 Playbook",
-  "admin.permissions.group.playbook_public.description": "管理公共Playbooks。",
-  "admin.permissions.group.playbook_public.name": "管理公共 Playbook",
+  "admin.permissions.group.playbook_private.description": "管理私有剧本。",
+  "admin.permissions.group.playbook_private.name": "管理私有剧本",
+  "admin.permissions.group.playbook_public.description": "管理公共剧本。",
+  "admin.permissions.group.playbook_public.name": "管理公共剧本",
   "admin.permissions.group.posts.description": "编写，编辑以及删除消息。",
   "admin.permissions.group.posts.name": "管理消息",
   "admin.permissions.group.private_channel.description": "创建和归档频道，管理设定和成员。",
@@ -1993,22 +1993,22 @@
   "admin.permissions.permission.manage_team_roles.name": "管理团队身份",
   "admin.permissions.permission.permanent_delete_user.description": "永久删除用户",
   "admin.permissions.permission.permanent_delete_user.name": "永久删除用户",
-  "admin.permissions.permission.playbook_private_create.description": "创建新的私有 Playbook。",
-  "admin.permissions.permission.playbook_private_create.name": "创建私有 Playbook",
-  "admin.permissions.permission.playbook_private_make_public.description": "将私有 playbook 转换为公共。",
-  "admin.permissions.permission.playbook_private_make_public.name": "转换 Playbook",
-  "admin.permissions.permission.playbook_private_manage_members.description": "添加和移除私有 Playbook 成员（包括 Playbook 管理员）。",
-  "admin.permissions.permission.playbook_private_manage_members.name": "管理 Playbook 成员",
-  "admin.permissions.permission.playbook_private_manage_properties.description": "规定清单、操作和模板。",
-  "admin.permissions.permission.playbook_private_manage_properties.name": "管理 Playbook 配置",
-  "admin.permissions.permission.playbook_public_create.description": "创建新的公共 Playbook。",
-  "admin.permissions.permission.playbook_public_create.name": "创建公共 Playbook",
-  "admin.permissions.permission.playbook_public_make_private.description": "将公共 playbook 转换为私有。",
-  "admin.permissions.permission.playbook_public_make_private.name": "转换 Playbook",
-  "admin.permissions.permission.playbook_public_manage_members.description": "添加和删除公共 Playbook 成员（包括 Playbook 管理员）。",
-  "admin.permissions.permission.playbook_public_manage_members.name": "管理 Playbook 成员",
-  "admin.permissions.permission.playbook_public_manage_properties.description": "规定清单、操作和模板。",
-  "admin.permissions.permission.playbook_public_manage_properties.name": "管理 Playbook 配置",
+  "admin.permissions.permission.playbook_private_create.description": "创建新的私有剧本。",
+  "admin.permissions.permission.playbook_private_create.name": "创建私有剧本",
+  "admin.permissions.permission.playbook_private_make_public.description": "将私有剧本转换为公共剧本。",
+  "admin.permissions.permission.playbook_private_make_public.name": "转换剧本",
+  "admin.permissions.permission.playbook_private_manage_members.description": "添加和移除私有剧本成员（包括剧本管理员）。",
+  "admin.permissions.permission.playbook_private_manage_members.name": "管理剧本成员",
+  "admin.permissions.permission.playbook_private_manage_properties.description": "配置检查清单、操作和模板。",
+  "admin.permissions.permission.playbook_private_manage_properties.name": "管理剧本配置",
+  "admin.permissions.permission.playbook_public_create.description": "创建新的公共剧本。",
+  "admin.permissions.permission.playbook_public_create.name": "创建公共剧本",
+  "admin.permissions.permission.playbook_public_make_private.description": "将公共剧本转换为私有剧本。",
+  "admin.permissions.permission.playbook_public_make_private.name": "转换剧本",
+  "admin.permissions.permission.playbook_public_manage_members.description": "添加和移除公共剧本成员（包括剧本管理员）。",
+  "admin.permissions.permission.playbook_public_manage_members.name": "管理剧本成员",
+  "admin.permissions.permission.playbook_public_manage_properties.description": "配置检查清单、操作和模板。",
+  "admin.permissions.permission.playbook_public_manage_properties.name": "管理剧本配置",
   "admin.permissions.permission.read_channel.description": "读取频道",
   "admin.permissions.permission.read_channel.name": "读取频道",
   "admin.permissions.permission.read_user_access_token.description": "读取用户访问令牌",
@@ -2019,7 +2019,7 @@
   "admin.permissions.permission.restore_custom_group.name": "恢复",
   "admin.permissions.permission.revoke_user_access_token.description": "撤销用户访问令牌",
   "admin.permissions.permission.revoke_user_access_token.name": "撤销用户访问令牌",
-  "admin.permissions.permission.run_create.description": "运行 Playbook。",
+  "admin.permissions.permission.run_create.description": "运行剧本。",
   "admin.permissions.permission.run_create.name": "创建运行",
   "admin.permissions.permission.upload_file.description": "上传文件",
   "admin.permissions.permission.upload_file.name": "上传文件",
@@ -2152,8 +2152,8 @@
   "admin.permissions.systemScheme.channelAdminsDescription": "已给予权限至频道创建者以及任何频道管理员。",
   "admin.permissions.systemScheme.channelAdminsTitle": "频道管理员",
   "admin.permissions.systemScheme.introBanner": "配置给团队管理员、频道管理员、以及所有其他人默认权限方案。此方案将被所有团队继承除非<link>团队覆盖方案</link>已设置。",
-  "admin.permissions.systemScheme.playbookAdmin": "Playbook管理员",
-  "admin.permissions.systemScheme.playbookAdminSubtitle": "授予Playbook管理员的权限。",
+  "admin.permissions.systemScheme.playbookAdmin": "剧本管理员",
+  "admin.permissions.systemScheme.playbookAdminSubtitle": "授予剧本管理员的权限。",
   "admin.permissions.systemScheme.resetDefaultsButton": "重置至默认",
   "admin.permissions.systemScheme.resetDefaultsButtonModalBody": "这将重置此页面的所有选择。您确定要重置吗？",
   "admin.permissions.systemScheme.resetDefaultsButtonModalTitle": "重置至默认？",
@@ -3824,8 +3824,8 @@
   "cloud_preview_modal.cyberdefense.messaging.subtitle": "在唯一的安全平台内整合对话与上下文。使用优先级、持久通知和已读回执进行紧迫沟通——以确保争分夺秒时的关键消息能被接收并采取行动。",
   "cloud_preview_modal.cyberdefense.messaging.title": "为行动而非噪音打造的消息传递",
   "cloud_preview_modal.cyberdefense.playbooks.sku_label": "企业版",
-  "cloud_preview_modal.cyberdefense.playbooks.subtitle": "在您的团队中使用由基于检查单的自动化驱动的工作流，以更快推进且减少错误。",
-  "cloud_preview_modal.cyberdefense.playbooks.title": "为高级工作流构建智能 Playbooks",
+  "cloud_preview_modal.cyberdefense.playbooks.subtitle": "使用基于检查清单的自动化工作流，让团队更快推进并减少错误。",
+  "cloud_preview_modal.cyberdefense.playbooks.title": "为高级工作流构建智能剧本",
   "cloud_preview_modal.cyberdefense.profiles.sku_label": "企业版",
   "cloud_preview_modal.cyberdefense.profiles.subtitle": "使用角色、地点或许可级别等自定义属性创建定制个人资料，以体现您的组织的结构。帮助团队理解他们的同事并找到更高效的协作方式。",
   "cloud_preview_modal.cyberdefense.profiles.title": "定制用户资料以匹配您的团队结构",
@@ -3842,8 +3842,8 @@
   "cloud_preview_modal.devsecops.messaging.subtitle": "在唯一的安全平台内整合对话与上下文。使用优先级、持久通知和已读回执进行紧迫沟通——以确保争分夺秒时的关键消息能被接收并采取行动。",
   "cloud_preview_modal.devsecops.messaging.title": "为行动而非噪音打造的消息传递",
   "cloud_preview_modal.devsecops.playbooks.sku_label": "企业版",
-  "cloud_preview_modal.devsecops.playbooks.subtitle": "在您的团队中使用由基于检查单的自动化驱动的工作流，以更快推进且减少错误。",
-  "cloud_preview_modal.devsecops.playbooks.title": "为高级工作流构建智能 Playbooks",
+  "cloud_preview_modal.devsecops.playbooks.subtitle": "使用基于检查清单的自动化工作流，让团队更快推进并减少错误。",
+  "cloud_preview_modal.devsecops.playbooks.title": "为高级工作流构建智能剧本",
   "cloud_preview_modal.devsecops.profiles.sku_label": "企业版",
   "cloud_preview_modal.devsecops.profiles.subtitle": "使用角色、地点或许可级别等自定义属性创建定制个人资料，以体现您的组织的结构。帮助团队理解他们的同事并找到更高效的协作方式。",
   "cloud_preview_modal.devsecops.profiles.title": "定制用户资料以匹配您的团队结构",
@@ -3863,8 +3863,8 @@
   "cloud_preview_modal.missionops.messaging.subtitle": "在唯一的安全平台内整合对话与上下文。使用优先级、持久通知和已读回执进行紧迫沟通——以确保争分夺秒时的关键消息能被接收并采取行动。",
   "cloud_preview_modal.missionops.messaging.title": "为行动而非噪音打造的消息传递",
   "cloud_preview_modal.missionops.playbooks.sku_label": "企业版",
-  "cloud_preview_modal.missionops.playbooks.subtitle": "在您的团队中使用由基于检查单的自动化驱动的工作流，以更快推进且减少错误。",
-  "cloud_preview_modal.missionops.playbooks.title": "为高级工作流构建智能 Playbooks",
+  "cloud_preview_modal.missionops.playbooks.subtitle": "使用基于检查清单的自动化工作流，让团队更快推进并减少错误。",
+  "cloud_preview_modal.missionops.playbooks.title": "为高级工作流构建智能剧本",
   "cloud_preview_modal.missionops.profiles.sku_label": "企业版",
   "cloud_preview_modal.missionops.profiles.subtitle": "使用角色、地点或许可级别等自定义属性创建定制个人资料，以体现您的组织的结构。帮助团队理解他们的同事并找到更高效的协作方式。",
   "cloud_preview_modal.missionops.profiles.title": "定制用户资料以匹配您的团队结构",
@@ -5916,9 +5916,9 @@
   "trial_benefits.modal.ldapDescription": "使用 AD/LDAP 组来组织并同时对多个用户应用操作。管理团队和频道成员、权限等。",
   "trial_benefits.modal.ldapTitle": "同步您的 Active Directory/LDAP 组",
   "trial_benefits.modal.onlyVisibleToAdmins": "仅管理员可见",
-  "trial_benefits.modal.playbooksButton": "打开 Playbooks",
-  "trial_benefits.modal.playbooksDescription": "创建私有 Playbooks，管理细化权限方案，并通过专用仪表板跟踪自定义指标。",
-  "trial_benefits.modal.playbooksTitle": "Playbooks 获得超能力",
+  "trial_benefits.modal.playbooksButton": "打开剧本",
+  "trial_benefits.modal.playbooksDescription": "创建私有剧本，管理细粒度权限方案，并通过专用仪表板跟踪自定义指标。",
+  "trial_benefits.modal.playbooksTitle": "剧本获得超能力",
   "trial_benefits.modal.systemConsoleDescription": "分配可自定义的管理员角色以授予指定用户读取和/或写入系统控制台选定部分的权限。",
   "trial_benefits.modal.systemConsoleTitle": "控制对系统控制台的访问权限",
   "trial_benefits.modal.trialStartTitle": "您的试用期已开始！探索企业版的优势",
@@ -6530,7 +6530,7 @@
   "webapp.mattermost.feature.custom_user_groups": "自定义用户组",
   "webapp.mattermost.feature.guest_accounts": "访客账号",
   "webapp.mattermost.feature.highlight_without_notification": "高亮关键词但不发送通知",
-  "webapp.mattermost.feature.playbooks_retro": "Playbooks 回顾",
+  "webapp.mattermost.feature.playbooks_retro": "剧本回顾",
   "webapp.mattermost.feature.start_call": "开始通话",
   "webapp.mattermost.feature.unlimited_file_storage": "无限文件存储",
   "webapp.mattermost.feature.unlimited_messages": "无限消息",
