--- a/webapp/channels/src/i18n/zh-TW.json
+++ b/webapp/channels/src/i18n/zh-TW.json
@@ -1565,10 +1565,10 @@
   "admin.permissions.group.manage_public_channel_members_and_read_groups.name": "管理頻道成員",
   "admin.permissions.group.manage_shared_channels.description": "管理共享頻道",
   "admin.permissions.group.manage_shared_channels.name": "共享頻道",
-  "admin.permissions.group.playbook_private.description": "管理私人指南。",
-  "admin.permissions.group.playbook_private.name": "管理私人指南",
-  "admin.permissions.group.playbook_public.description": "管理公開指南。",
-  "admin.permissions.group.playbook_public.name": "管理公開指南",
+  "admin.permissions.group.playbook_private.description": "管理私人劇本。",
+  "admin.permissions.group.playbook_private.name": "管理私人劇本",
+  "admin.permissions.group.playbook_public.description": "管理公開劇本。",
+  "admin.permissions.group.playbook_public.name": "管理公開劇本",
   "admin.permissions.group.posts.description": "傳送、編輯與刪除訊息。",
   "admin.permissions.group.posts.name": "管理訊息",
   "admin.permissions.group.private_channel.description": "建立與封存頻道，管理設定與成員。",
@@ -1677,22 +1677,22 @@
   "admin.permissions.permission.manage_team_roles.name": "管理團隊地位",
   "admin.permissions.permission.permanent_delete_user.description": "永久刪除使用者",
   "admin.permissions.permission.permanent_delete_user.name": "永久刪除使用者",
-  "admin.permissions.permission.playbook_private_create.description": "建立私人指南。",
-  "admin.permissions.permission.playbook_private_create.name": "建立私人指南",
-  "admin.permissions.permission.playbook_private_make_public.description": "轉換私人指南為公開。",
-  "admin.permissions.permission.playbook_private_make_public.name": "轉換指南",
-  "admin.permissions.permission.playbook_private_manage_members.description": "新增和移除私人指南成員。",
-  "admin.permissions.permission.playbook_private_manage_members.name": "管理指南成員",
-  "admin.permissions.permission.playbook_private_manage_properties.description": "規定清單、動作和範本。",
-  "admin.permissions.permission.playbook_private_manage_properties.name": "管理指南組態",
-  "admin.permissions.permission.playbook_public_create.description": "建立公開指南。",
-  "admin.permissions.permission.playbook_public_create.name": "建立公開指南",
-  "admin.permissions.permission.playbook_public_make_private.description": "轉換公開指南為私人。",
-  "admin.permissions.permission.playbook_public_make_private.name": "轉換指南",
-  "admin.permissions.permission.playbook_public_manage_members.description": "新增和移除公開指南成員。",
-  "admin.permissions.permission.playbook_public_manage_members.name": "管理指南成員",
-  "admin.permissions.permission.playbook_public_manage_properties.description": "規定清單、動作和範本。",
-  "admin.permissions.permission.playbook_public_manage_properties.name": "管理指南組態",
+  "admin.permissions.permission.playbook_private_create.description": "建立新的私人劇本。",
+  "admin.permissions.permission.playbook_private_create.name": "建立私人劇本",
+  "admin.permissions.permission.playbook_private_make_public.description": "將私人劇本轉換為公開劇本。",
+  "admin.permissions.permission.playbook_private_make_public.name": "轉換劇本",
+  "admin.permissions.permission.playbook_private_manage_members.description": "新增和移除私人劇本成員（包括劇本管理員）。",
+  "admin.permissions.permission.playbook_private_manage_members.name": "管理劇本成員",
+  "admin.permissions.permission.playbook_private_manage_properties.description": "配置檢查清單、操作和範本。",
+  "admin.permissions.permission.playbook_private_manage_properties.name": "管理劇本配置",
+  "admin.permissions.permission.playbook_public_create.description": "建立新的公開劇本。",
+  "admin.permissions.permission.playbook_public_create.name": "建立公開劇本",
+  "admin.permissions.permission.playbook_public_make_private.description": "將公開劇本轉換為私人劇本。",
+  "admin.permissions.permission.playbook_public_make_private.name": "轉換劇本",
+  "admin.permissions.permission.playbook_public_manage_members.description": "新增和移除公開劇本成員（包括劇本管理員）。",
+  "admin.permissions.permission.playbook_public_manage_members.name": "管理劇本成員",
+  "admin.permissions.permission.playbook_public_manage_properties.description": "配置檢查清單、操作和範本。",
+  "admin.permissions.permission.playbook_public_manage_properties.name": "管理劇本配置",
   "admin.permissions.permission.read_channel.description": "讀取頻道",
   "admin.permissions.permission.read_channel.name": "讀取頻道",
   "admin.permissions.permission.read_user_access_token.description": "讀取使用者存取 Token",
@@ -1834,8 +1834,8 @@
   "admin.permissions.systemScheme.channelAdminsDescription": "授予頻道建立者及頻道管理員的權限。",
   "admin.permissions.systemScheme.channelAdminsTitle": "頻道管理員",
   "admin.permissions.systemScheme.introBanner": "設定團隊管理員、頻道管理員及其他人的預設權限。如果各團隊自行設定了<link>團隊級覆寫策略</link>，將蓋過此處設定。",
-  "admin.permissions.systemScheme.playbookAdmin": "指南管理員",
-  "admin.permissions.systemScheme.playbookAdminSubtitle": "授予指南管理員的權限。",
+  "admin.permissions.systemScheme.playbookAdmin": "劇本管理員",
+  "admin.permissions.systemScheme.playbookAdminSubtitle": "授予劇本管理員的權限。",
   "admin.permissions.systemScheme.resetDefaultsButton": "重設為預設值",
   "admin.permissions.systemScheme.resetDefaultsButtonModalBody": "此頁面所有已選項目將被重設為預設值，確定重設？",
   "admin.permissions.systemScheme.resetDefaultsButtonModalTitle": "確定重設為預設值？",
@@ -5171,9 +5171,9 @@
   "trial_benefits.modal.ldapDescription": "使用 AD/LDAP 群組一次組織操作並將其套用於多個使用者。管理團隊和頻道成員資格、權限等。",
   "trial_benefits.modal.ldapTitle": "同步您的 AD/LDAP 群組",
   "trial_benefits.modal.onlyVisibleToAdmins": "僅對管理員可見",
-  "trial_benefits.modal.playbooksButton": "開啟指南",
-  "trial_benefits.modal.playbooksDescription": "建立私人指南，管理精密的分權措施，並使用專用儀表板追蹤自訂指標。",
-  "trial_benefits.modal.playbooksTitle": "指南使您強大",
+  "trial_benefits.modal.playbooksButton": "開啟劇本",
+  "trial_benefits.modal.playbooksDescription": "建立私人劇本，管理細粒度權限方案，並通過專用儀表板追蹤自定義指標。",
+  "trial_benefits.modal.playbooksTitle": "劇本獲得超能力",
   "trial_benefits.modal.systemConsoleDescription": "使用系統使用者向指定使用者授予對系統控制台特定部分的讀取和 / 或寫入存取權限。",
   "trial_benefits.modal.systemConsoleTitle": "提供對系統控制台的受控訪問",
   "trial_benefits.modal.trialStartTitle": "您的試用期已開始！探索企業版的優勢",
@@ -5709,7 +5709,7 @@
   "webapp.mattermost.feature.custom_user_groups": "自訂使用者群組",
   "webapp.mattermost.feature.guest_accounts": "訪客帳號",
   "webapp.mattermost.feature.highlight_without_notification": "無通知的關鍵字醒目提示",
-  "webapp.mattermost.feature.playbooks_retro": "指南追溯",
+  "webapp.mattermost.feature.playbooks_retro": "劇本回顧",
   "webapp.mattermost.feature.start_call": "開始通話",
   "webapp.mattermost.feature.unlimited_file_storage": "無限檔案儲存空間",
   "webapp.mattermost.feature.unlimited_messages": "無限訊息",
